--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,20 @@
-numba
-git+https://github.com/votchallenge/vot-toolkit-python
-
-
-depthai
-
-wheel
-PySide2
-git+https://github.com/geaxgx/depthai_pipeline_graph.git
-
+numpy==1.23
+pandas
 opencv-python
+matplotlib
 
-torch==1.7.0
-torchvision==0.8.1
+easydict
+timm
+yacs
 tensorboardX
 jpeg4py
 lmdb
+
+black
+
+vot-toolkit==0.5.3
+torch==1.7.0
+torchvision==0.8.1
+onnx==1.13.0
+onnxruntime==1.14.0
+depthai==2.20.2.0
